Fix - Scrolling to top & overflow-x conflict

--- a/src/App.scss
+++ b/src/App.scss
@@ -44,10 +44,7 @@ code {
 
 html, body, #root {
   height: 100%;
-}
-
-#root {
-  overflow-x: hidden;
+  overflow-x: clip;
 }
 
 header {
